tests/baselines/reference/es3-oldStyleOctalLiteralTypes.errors.txt
tests/cases/compiler/es3-oldStyleOctalLiteralTypes.ts(1,8): error TS8017: Octal literal types must use ES2015 syntax. Use the syntax '0o10'.
tests/cases/compiler/es3-oldStyleOctalLiteralTypes.ts(2,8): error TS8017: Octal literal types must use ES2015 syntax. Use the syntax '-0o20'.


==== tests/cases/compiler/es3-oldStyleOctalLiteralTypes.ts (2 errors) ====
    let x: 010;
           ~~~
!!! error TS8017: Octal literal types must use ES2015 syntax. Use the syntax '0o10'.
    let y: -020;
           ~~~~
!!! error TS8017: Octal literal types must use ES2015 syntax. Use the syntax '-0o20'.
    